makko/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  revisionHistoryLimit: 1
  replicas: 0
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-yha-nr5
      containers:
      - image: lscr.io/linuxserver/radarr:6.4.4
        name: radarr
        volumeMounts:
        - name: media
          mountPath: /media
        - name: config
          mountPath: /config
        - name: data
          mountPath: /downloads
        ports:
        - containerPort: 7878
        resources:
          limits:
            cpu: "2"
            memory: 2048Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 150m
            memory: 256Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-data
          readOnly: false
      - name: data
        hostPath:
          path: /var/mnt/transmission-cache
          type: DirectoryOrCreate
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
          readOnly: false
